--- a/page-videos.html
+++ b/page-videos.html
@@ -77,7 +77,7 @@
                     <div class="card card-style mx-2 mt-2 video-card-container" data-card-height="170">
                       <!-- Video Background -->
                       <video class="card-video-bg" muted loop preload="metadata"
-                        poster="thumbnails/DJI_20250511155856_0068_D.jpg">
+                        poster="images\thumbnails\DJI_20250511155856_0068_D.jpg">
                         <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4"
                           type="video/mp4">
                       </video>
@@ -124,7 +124,7 @@
                     <div class="card card-style mx-2 mt-2 video-card-container" data-card-height="170">
                       <!-- Video Background -->
                       <video class="card-video-bg" muted loop preload="metadata"
-                        poster="thumbnails/DJI_20250511155856_0068_D.jpg">
+                        poster="images\thumbnails\DJI_20250511155856_0068_D.jpg">
                         <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4"
                           type="video/mp4">
                       </video>
@@ -201,7 +201,7 @@
                     <div class="card card-style mx-2 mt-2 video-card-container" data-card-height="170">
                       <!-- Video Background -->
                       <video class="card-video-bg" muted loop preload="metadata"
-                        poster="thumbnails/DJI_20250511155856_0068_D.jpg">
+                        poster="images\thumbnails\DJI_20250511155856_0068_D.jpg">
                         <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4"
                           type="video/mp4">
                       </video>
@@ -250,7 +250,7 @@
                     <div class="card card-style mx-2 mt-2 video-card-container" data-card-height="170">
                       <!-- Video Background -->
                       <video class="card-video-bg" muted loop preload="metadata"
-                        poster="thumbnails/DJI_20250511155856_0068_D.jpg">
+                        poster="images\thumbnails\DJI_20250511155856_0068_D.jpg">
                         <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4"
                           type="video/mp4">
                       </video>
@@ -518,8 +518,19 @@
                 <div class="content">
                   <a href="#" class="d-flex mb-3">
                     <div class="w-100 me-3">
-                      <div class="card card-style m-0" data-card-height="110"
-                        style="background-image:url('images/fitness/13t.jpg')"></div>
+                      <div class="card card-style m-0 video-thumbnail-container" data-card-height="110" style="position: relative; overflow: hidden;">
+                        <video class="thumbnail-video" muted loop preload="metadata"
+                          poster="images/thumbnails/DJI_20250511155856_0068_D.jpg" style="
+                          width: 100%;
+                          height: 100%;
+                          object-fit: cover;
+                          position: absolute;
+                          top: 0;
+                          left: 0;
+                        ">
+                          <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4" type="video/mp4">
+                        </video>
+                      </div>
                     </div>
                     <div class="ms-auto w-100">
                       <h5 class="font-600 font-16 line-height-sm pt-1">10m Sprint</h5>
@@ -530,8 +541,19 @@
                   <div class="divider mt-3 mb-3"></div>
                   <a href="#" class="d-flex mb-3">
                     <div class="w-100 me-3">
-                      <div class="card card-style m-0" data-card-height="110"
-                        style="background-image:url('images/fitness/12t.jpg')"></div>
+                      <div class="card card-style m-0 video-thumbnail-container" data-card-height="110" style="position: relative; overflow: hidden;">
+                        <video class="thumbnail-video" muted loop preload="metadata"
+                          poster="images/thumbnails/DJI_20250511155856_0068_D.jpg" style="
+                          width: 100%;
+                          height: 100%;
+                          object-fit: cover;
+                          position: absolute;
+                          top: 0;
+                          left: 0;
+                        ">
+                          <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4" type="video/mp4">
+                        </video>
+                      </div>
                     </div>
                     <div class="ms-auto w-100">
                       <h5 class="font-600 font-16 line-height-sm pt-1">20m Sprint</h5>
@@ -542,8 +564,19 @@
                   <div class="divider mt-3 mb-3"></div>
                   <a href="#" class="d-flex mb-3">
                     <div class="w-100 me-3">
-                      <div class="card card-style m-0" data-card-height="110"
-                        style="background-image:url('images/fitness/14t.jpg')"></div>
+                      <div class="card card-style m-0 video-thumbnail-container" data-card-height="110" style="position: relative; overflow: hidden;">
+                        <video class="thumbnail-video" muted loop preload="metadata"
+                          poster="images/thumbnails/DJI_20250511155856_0068_D.jpg" style="
+                          width: 100%;
+                          height: 100%;
+                          object-fit: cover;
+                          position: absolute;
+                          top: 0;
+                          left: 0;
+                        ">
+                          <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4" type="video/mp4">
+                        </video>
+                      </div>
                     </div>
                     <div class="ms-auto w-100">
                       <h5 class="font-600 font-16 line-height-sm pt-1">Gewandtheit</h5>
@@ -554,8 +587,19 @@
                   <div class="divider mt-3 mb-3"></div>
                   <a href="#" class="d-flex mb-3">
                     <div class="w-100 me-3">
-                      <div class="card card-style m-0" data-card-height="110"
-                        style="background-image:url('images/fitness/16t.jpg')"></div>
+                      <div class="card card-style m-0 video-thumbnail-container" data-card-height="110" style="position: relative; overflow: hidden;">
+                        <video class="thumbnail-video" muted loop preload="metadata"
+                          poster="images/thumbnails/DJI_20250511155856_0068_D.jpg" style="
+                          width: 100%;
+                          height: 100%;
+                          object-fit: cover;
+                          position: absolute;
+                          top: 0;
+                          left: 0;
+                        ">
+                          <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4" type="video/mp4">
+                        </video>
+                      </div>
                     </div>
                     <div class="ms-auto w-100">
                       <h5 class="font-600 font-16 line-height-sm pt-1">Ballkontrolle</h5>
@@ -566,8 +610,19 @@
                   <div class="divider mt-3 mb-3"></div>
                   <a href="#" class="d-flex mb-3">
                     <div class="w-100 me-3">
-                      <div class="card card-style m-0" data-card-height="110"
-                        style="background-image:url('images/fitness/17t.jpg')"></div>
+                      <div class="card card-style m-0 video-thumbnail-container" data-card-height="110" style="position: relative; overflow: hidden;">
+                        <video class="thumbnail-video" muted loop preload="metadata"
+                          poster="images/thumbnails/DJI_20250511155856_0068_D.jpg" style="
+                          width: 100%;
+                          height: 100%;
+                          object-fit: cover;
+                          position: absolute;
+                          top: 0;
+                          left: 0;
+                        ">
+                          <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4" type="video/mp4">
+                        </video>
+                      </div>
                     </div>
                     <div class="ms-auto w-100">
                       <h5 class="font-600 font-16 line-height-sm pt-1">Balljonglieren</h5>
@@ -578,8 +633,19 @@
                   <div class="divider mt-3 mb-3"></div>
                   <a href="#" class="d-flex mb-3">
                     <div class="w-100 me-3">
-                      <div class="card card-style m-0" data-card-height="110"
-                        style="background-image:url('images/fitness/18t.jpg')"></div>
+                      <div class="card card-style m-0 video-thumbnail-container" data-card-height="110" style="position: relative; overflow: hidden;">
+                        <video class="thumbnail-video" muted loop preload="metadata"
+                          poster="images/thumbnails/DJI_20250511155856_0068_D.jpg" style="
+                          width: 100%;
+                          height: 100%;
+                          object-fit: cover;
+                          position: absolute;
+                          top: 0;
+                          left: 0;
+                        ">
+                          <source src="https://data3.fra1.cdn.digitaloceanspaces.com/DJI_20250511155856_0068_D.mp4" type="video/mp4">
+                        </video>
+                      </div>
                     </div>
                     <div class="ms-auto w-100">
                       <h5 class="font-600 font-16 line-height-sm pt-1">Dribbling</h5>
