--- a/page-videos.html
+++ b/page-videos.html
@@ -24,11 +24,9 @@
 </head>
 
 <body class="theme-dark" data-highlight="highlight-blue" data-gradient="body-default">
-
   <div id="preloader">
     <div class="spinner-border color-highlight" role="status"></div>
   </div>
-
   <div id="page">
     <div id="footer-bar" class="footer-bar-1">
       <a href="page-Vergleich.html"><i class="fa fa-chart-bar"></i><span>Vergleich</span></a>
@@ -37,15 +35,10 @@
       <a href="page-videos.html" class="active-nav"><i class="fa fa-video"></i><span>Videos</span></a>
       <a href="#" data-menu="menu-settings"><i class="fa fa-cog"></i><span>Settings</span></a>
     </div>
-
     <div class="page-content">
       <!-- Main Content Card -->
       <div class="page-content header-clear-small">
-
         <div class="content mt-n1">
-
-
-
           <div class="content mb-0" id="tab-group-listing">
             <div class="card card-style mx-0 mb-3">
               <div class="tab-controls" data-highlight="color-blue-dark"> <a href="#"
@@ -54,16 +47,6 @@
                   <span class="d-flex justify-content-center align-items-center h-100 py-3">
                     <img src="images/logos/DFB-Logo.svg" alt="DFB Logo" class="dfb-tab-logo">
                   </span>
-                </a> <a href="#" class="no-effect font-15 font-600 py-2 border-0" data-bs-toggle="collapse"
-                  data-bs-target="#tab-2">
-                  <span class="d-block font-30 pt-2"><i class="fa fa-dumbbell"></i></span>
-                  <span class="font-11 d-block mb-n2 pt-2"></span>
-                  <span class="font-16 d-block pb-2">Strength</span>
-                </a> <a href="#" class="no-effect font-15 font-600 py-2 border-0" data-bs-toggle="collapse"
-                  data-bs-target="#tab-3">
-                  <span class="d-block font-30 pt-2"><i class="fa fa-bullseye"></i></span>
-                  <span class="font-11 d-block mb-n2 pt-2"></span>
-                  <span class="font-16 d-block pb-2">Technik</span>
                 </a>
               </div>
             </div>
@@ -80,20 +63,15 @@
                           type="video/mp4" />
                       </video>
 
-                      <div class="card-top p-3">
-                        <div class="float-start">
-                          <span class="bg-theme color-theme px-2 py-2 rounded-sm">
-                            <i class="fa fa-clock color-blue-dark pe-1"></i>
-                            2.00 s
-                          </span>
-                        </div>
-                      </div>
                       <div class="card-bottom p-3 pb-2">
                         <h2 class="color-white">10m Sprint</h2>
+                        <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
+                          <i class="fa fa-clock color-blue-dark pe-1"></i>
+                          2.00 s
+                        </span>
                       </div>
                       <div class="card-overlay bg-gradient opacity-70"></div>
                     </div>
-                    <!-- Video content container removed -->
                   </div>
 
                   <!-- Card 2 - Alternative 10m Sprint -->
@@ -104,20 +82,15 @@
                           type="video/mp4" />
                       </video>
 
-                      <div class="card-top p-3">
-                        <div class="float-start">
-                          <span class="bg-theme color-theme px-2 py-2 rounded-sm">
-                            <i class="fa fa-clock color-blue-dark pe-1"></i>
-                            1.95 s
-                          </span>
-                        </div>
-                      </div>
                       <div class="card-bottom p-3 pb-2">
                         <h2 class="color-white">10m Sprint Pro</h2>
+                        <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
+                          <i class="fa fa-clock color-blue-dark pe-1"></i>
+                          1.95 s
+                        </span>
                       </div>
                       <div class="card-overlay bg-gradient opacity-70"></div>
                     </div>
-                    <!-- Video content container removed -->
                   </div>
                 </div>
               </div>
@@ -132,16 +105,12 @@
                           type="video/mp4" />
                       </video>
 
-                      <div class="card-top p-3">
-                        <div class="float-start">
-                          <span class="bg-theme color-theme px-2 py-2 rounded-sm">
-                            <i class="fa fa-clock color-blue-dark pe-1"></i>
-                            3.59 s
-                          </span>
-                        </div>
-                      </div>
                       <div class="card-bottom p-3 pb-2">
                         <h2 class="color-white">20m Sprint</h2>
+                        <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
+                          <i class="fa fa-clock color-blue-dark pe-1"></i>
+                          3.59 s
+                        </span>
                       </div>
                       <div class="card-overlay bg-gradient opacity-70"></div>
                     </div>
@@ -156,16 +125,12 @@
                           type="video/mp4" />
                       </video>
 
-                      <div class="card-top p-3">
-                        <div class="float-start">
-                          <span class="bg-theme color-theme px-2 py-2 rounded-sm">
-                            <i class="fa fa-clock color-blue-dark pe-1"></i>
-                            3.42 s
-                          </span>
-                        </div>
-                      </div>
                       <div class="card-bottom p-3 pb-2">
                         <h2 class="color-white">20m Sprint Elite</h2>
+                        <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
+                          <i class="fa fa-clock color-blue-dark pe-1"></i>
+                          3.42 s
+                        </span>
                       </div>
                       <div class="card-overlay bg-gradient opacity-70"></div>
                     </div>
@@ -180,16 +145,12 @@
                       type="video/mp4" />
                   </video>
 
-                  <div class="card-top p-3">
-                    <div class="float-start">
-                      <span class="bg-theme color-theme px-2 py-2 rounded-sm">
-                        <i class="fa fa-clock color-blue-dark pe-1"></i>
-                        7.81 s
-                      </span>
-                    </div>
-                  </div>
                   <div class="card-bottom p-3 pb-2">
                     <h2 class="color-white">Gewandtheit</h2>
+                    <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
+                      <i class="fa fa-clock color-blue-dark pe-1"></i>
+                      7.81 s
+                    </span>
                   </div>
                   <div class="card-overlay bg-gradient opacity-70"></div>
 
@@ -197,18 +158,7 @@
                 </div>
                 <!-- Video content container removed -->
               </div>
-              <div class="card card-style mx-0">
-                <div class="card card-style mx-2 mt-2 video-card-container" data-card-height="auto">
-                  <video playsinline class="card-video-bg" preload="metadata">
-                    <source src="https://data3.fra1.cdn.digitaloceanspaces.com/Jala_Libby_0001_D.mp4" type="video/mp4" />
-                  </video>
-                  <div class="card-center ps-3 pe-3">
-                    <h1 class="color-white text-uppercase font-900 mb-0">Lorem Ipsum</h1>
-                    <h4 class="color-white font-400 opacity-80">Dolor Sit Amet Consectetur</h4>
-                  </div>
-                  <div class="card-overlay bg-gradient"></div>
-                </div>
-              </div>
+
               <div class="card card-style mx-0">
                 <div class="card card-style mx-2 mt-2 video-card-container" data-card-height="auto">
                   <!-- Video Background -->
@@ -218,16 +168,12 @@
                       type="video/mp4">
                   </video>
 
-                  <div class="card-top p-3">
-                    <div class="float-start">
-                      <span class="bg-theme color-theme px-2 py-2 rounded-sm">
-                        <i class="fa fa-clock color-blue-dark pe-1"></i>
-                        10.82 s
-                      </span>
-                    </div>
-                  </div>
                   <div class="card-bottom p-3 pb-2">
                     <h2 class="color-white">Ballkontrolle</h2>
+                    <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
+                      <i class="fa fa-clock color-blue-dark pe-1"></i>
+                      10.82 s
+                    </span>
                   </div>
                   <div class="card-overlay bg-gradient opacity-70"></div>
 
@@ -244,16 +190,12 @@
                       type="video/mp4">
                   </video>
 
-                  <div class="card-top p-3">
-                    <div class="float-start">
-                      <span class="bg-theme color-theme px-2 py-2 rounded-sm">
-                        <i class="fa fa-clock color-blue-dark pe-1"></i>
-                        0.00 P
-                      </span>
-                    </div>
-                  </div>
                   <div class="card-bottom p-3 pb-2">
                     <h2 class="color-white">Balljonglieren</h2>
+                    <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
+                      <i class="fa fa-star color-yellow-dark pe-1"></i>
+                      0.00 P
+                    </span>
                   </div>
                   <div class="card-overlay bg-gradient opacity-70"></div>
 
@@ -270,16 +212,12 @@
                       type="video/mp4">
                   </video>
 
-                  <div class="card-top p-3">
-                    <div class="float-start">
-                      <span class="bg-theme color-theme px-2 py-2 rounded-sm">
-                        <i class="fa fa-clock color-blue-dark pe-1"></i>
-                        10.27 s
-                      </span>
-                    </div>
-                  </div>
                   <div class="card-bottom p-3 pb-2">
                     <h2 class="color-white">Dribbling</h2>
+                    <span class="bg-theme color-theme px-2 py-2 rounded-sm d-block mt-1" style="background: none !important;">
+                      <i class="fa fa-clock color-blue-dark pe-1"></i>
+                      10.27 s
+                    </span>
                   </div>
                   <div class="card-overlay bg-gradient opacity-70"></div>
 
@@ -442,21 +380,19 @@
                     <div class="col-6">
                       <div class="card card-style m-0" data-card-height="140"
                         style="background-image:url('images/fitness/5t.jpg')">
-                        <div class="card-top p-2">
-                          <span class="bg-yellow-light color-white p-2 py-1 rounded-sm font-12 font-400">2.00 s</span>
-                        </div>
+                        <!-- Remove card-top, move result under title -->
                       </div>
                       <h5 class="font-600 font-16 line-height-sm pt-3">10m Sprint</h5>
+                      <span class="bg-yellow-light color-white p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">2.00 s</span>
                       <p class="font-12 line-height-s">2.00 s</p>
                     </div>
                     <div class="col-6">
                       <div class="card card-style m-0 bg-28" data-card-height="140"
                         style="background-image:url('images/fitness/4t.jpg')">
-                        <div class="card-top p-2">
-                          <span class="bg-red-dark p-2 py-1 rounded-sm font-12 font-400">3.59 s</span>
-                        </div>
+                        <!-- Remove card-top, move result under title -->
                       </div>
                       <h5 class="font-600 font-16 line-height-sm pt-3">20m Sprint</h5>
+                      <span class="bg-red-dark p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">3.59 s</span>
                       <p class="font-12 line-height-s">3.59 s</p>
                     </div>
                     <div class="col-12">
@@ -465,21 +401,19 @@
                     <div class="col-6">
                       <div class="card card-style m-0" data-card-height="140"
                         style="background-image:url('images/fitness/11t.jpg')">
-                        <div class="card-top p-2">
-                          <span class="bg-gray-light color-black p-2 py-1 rounded-sm font-12 font-400">7.81 s</span>
-                        </div>
+                        <!-- Remove card-top, move result under title -->
                       </div>
                       <h5 class="font-600 font-16 line-height-sm pt-3">Gewandtheit</h5>
+                      <span class="bg-gray-light color-black p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">7.81 s</span>
                       <p class="font-12 line-height-s">7.81 s</p>
                     </div>
                     <div class="col-6">
                       <div class="card card-style m-0 bg-28" data-card-height="140"
                         style="background-image:url('images/fitness/10t.jpg')">
-                        <div class="card-top p-2">
-                          <span class="bg-teal-dark p-2 py-1 rounded-sm font-12 font-400">10.82 s</span>
-                        </div>
+                        <!-- Remove card-top, move result under title -->
                       </div>
                       <h5 class="font-600 font-16 line-height-sm pt-3">Ballkontrolle</h5>
+                      <span class="bg-teal-dark p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">10.82 s</span>
                       <p class="font-12 line-height-s">10.82 s</p>
                     </div>
                     <div class="col-12">
@@ -488,21 +422,19 @@
                     <div class="col-6">
                       <div class="card card-style m-0" data-card-height="140"
                         style="background-image:url('images/fitness/6t.jpg')">
-                        <div class="card-top p-2">
-                          <span class="bg-blue-dark p-2 py-1 rounded-sm font-12 font-400">0.00 P</span>
-                        </div>
+                        <!-- Remove card-top, move result under title -->
                       </div>
                       <h5 class="font-600 font-16 line-height-sm pt-3">Balljonglieren</h5>
+                      <span class="bg-blue-dark p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">0.00 P</span>
                       <p class="font-12 line-height-s">0.00 P</p>
                     </div>
                     <div class="col-6">
                       <div class="card card-style m-0 bg-28" data-card-height="140"
                         style="background-image:url('images/fitness/7t.jpg')">
-                        <div class="card-top p-2">
-                          <span class="bg-green-dark p-2 py-1 rounded-sm font-12 font-400">10.27 s</span>
-                        </div>
+                        <!-- Remove card-top, move result under title -->
                       </div>
                       <h5 class="font-600 font-16 line-height-sm pt-3">Dribbling</h5>
+                      <span class="bg-green-dark p-2 py-1 rounded-sm font-12 font-400 d-block mt-1">10.27 s</span>
                       <p class="font-12 line-height-s">10.27 s</p>
                     </div>
                   </div>
@@ -1501,7 +1433,5 @@
           }
         });
       </script>
-
 </body>
-
 </html>
