chore: add Sentry script for error tracking in index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<script
+      src="https://js-de.sentry-cdn.com/d241b51fa2d2cf9ab5483d7c8601e678.min.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta
