chore: add @vercel/speed-insights dependency and integrate script in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
       crossorigin="anonymous"
     ></script>
     <meta name="mobile-web-app-capable" content="yes" />
+<script>
+    Sentry.onLoad(function() {
+      Sentry.init({
+        // Add any additional configuration here
+      });
+    });
+  </script>
+<script defer src="/_vercel/speed-insights/script.js"></script>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta
       name="viewport"
